@@ -1,0 +1,3 @@
+Order deny,allow
+Deny from all
+Allow from 127.0.0.1
