@@ -1,3 +1,9 @@
+--- wrinche v0.0.2 alpha build 03 ---
+ Release date: 2016-11-29
+- Increased security of config directory
+- Installer now saves correct e-mail into the database
+- Database can now be connected through unix socket, host and also host + port
+------------------------------------------------------------------------------------------------------------------------
 --- wrinche v0.0.2 alpha build 02 ---
  Release date: 2016-11-28
 - Changed overall data structure
